examples/test/testpolicy14921.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14921
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key31: value21
      key25: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value1
          key36: value0
      podSelector:
        matchLabels:
          key13: value47
          key23: value6
